--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -18,6 +18,14 @@
   justify-content: flex-start;
   flex: 1;
 }
+.expense-item__date {
+  color: #183059;
+  font-size: 1rem;
+  /*flex: 1;
+  margin: 0 1rem;
+  */
+  color: white;
+}
 
 .expense-item h2 {
   color: #183059;
